--- a/package.json
+++ b/package.json
@@ -62,26 +62,26 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "chai": "^4.1.2",
+    "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "coveralls": "^2.13.1",
-    "lodash": "4.17.x",
-    "mocha": "^3.4.1",
+    "coveralls": "^3.0.9",
+    "lodash": "^4.17.15",
+    "mocha": "^7.1.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^10.3.2",
-    "request": "^2.83.0",
+    "nyc": "^15.0.0",
+    "request": "^2.88.2",
     "semistandard": "^12.0.0",
-    "sinon": "^4.0.2",
-    "standard-version": "^4.3.0"
+    "sinon": "^9.0.0",
+    "standard-version": "^7.1.0"
   },
   "dependencies": {
-    "amqplib": "~0.5.2",
+    "amqplib": "^0.5.5",
     "bole": "^3.0.2",
     "debug": "^3.1.0",
-    "machina": "2.0.2",
+    "machina": "^4.0.2",
     "monologue.js": "^0.3.5",
     "postal": "^2.0.5",
-    "uuid": "^3.1.0"
+    "uuid": "^7.0.2"
   },
   "semistandard": {
     "env": [
